<?xml version="1.0"?>
<package format="2">
  <name>ecl_eigen</name>
  <version>0.61.18</version>
  <description>
     This provides an Eigen implementation for ecl's linear algebra.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_eigen</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>eigen</build_depend>

  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


