<?xml version="1.0"?>
<package format="2">
  <name>ecl_exceptions</name>
  <version>1.2.1</version>
  <description>
     Template based exceptions - these are simple and practical
     and avoid the proliferation of exception types. Although not
     syntatactically ideal, it is convenient and eminently practical.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_exceptions</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_errors</build_depend>

  <exec_depend>ecl_license</exec_depend>
  <exec_depend>ecl_config</exec_depend>
  <exec_depend>ecl_errors</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


