<?xml version="1.0"?>
<package>
  <name>ecl_filesystem</name>
  <version>0.61.17</version>
  <description>
     Cross platform filesystem utilities (until c++11 makes its way in).
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_filesystem</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_errors</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  
  <run_depend>ecl_license</run_depend>
  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_config</run_depend>
  <run_depend>ecl_errors</run_depend>
  <run_depend>ecl_exceptions</run_depend>
</package>


