<?xml version="1.0"?>
<package>
  <name>ecl_formatters</name>
  <version>0.61.17</version>
  <description>
   The formatters here simply format various input types to a specified
   text format. They can be used with most streaming types (including both
   ecl and stl streams).
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_formatters</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_converters</build_depend>
  
  <run_depend>ecl_license</run_depend>
  <run_depend>ecl_config</run_depend>
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_converters</run_depend>
</package>


