<?xml version="1.0"?>
<package>
  <name>ecl_ipc</name>
  <version>0.62.3</version>
  <description>
  Interprocess mechanisms vary greatly across platforms - sysv, posix, win32, there
  are more than a few. This package provides an infrastructure to allow for developing 
  cross platform c++ wrappers around the lower level c api's that handle these 
  mechanisms. These make it not only easier to utilise such mechanisms, but allow it 
  to be done consistently across platforms.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_ipc</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_errors</build_depend>
  <build_depend>ecl_time_lite</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_time</build_depend>
  
  <run_depend>ecl_license</run_depend>
  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_config</run_depend>
  <run_depend>ecl_errors</run_depend>
  <run_depend>ecl_time_lite</run_depend>
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_time</run_depend>
</package>


