<?xml version="1.0"?>
<package format="2">
  <name>ecl_ipc</name>
  <version>1.2.1</version>
  <description>
  Interprocess mechanisms vary greatly across platforms - sysv, posix, win32, there
  are more than a few. This package provides an infrastructure to allow for developing
  cross platform c++ wrappers around the lower level c api's that handle these
  mechanisms. These make it not only easier to utilise such mechanisms, but allow it
  to be done consistently across platforms.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_ipc</url>
  <url type="repository">https://github.com/stonier/ecl_core</url>
  <url type="bugtracker">https://github.com/stonier/ecl_core/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_config</build_depend>
  <build_depend>ecl_errors</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_time_lite</build_depend>
  <build_depend>ecl_time</build_depend>

  <exec_depend>ecl_license</exec_depend>
  <exec_depend>ecl_build</exec_depend>
  <exec_depend>ecl_config</exec_depend>
  <exec_depend>ecl_errors</exec_depend>
  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_threads</exec_depend>
  <exec_depend>ecl_time_lite</exec_depend>
  <exec_depend>ecl_time</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


